# international-delivery

./: .secrets.toml  Dockerfile  README.md  config.py  docker-compose.yaml  pyproject.toml
src/: main.py
src/cache/: cache.py
src/database/: database.py  models.py
src/loguru/: loguru_logger.py
src/routers/: all_types.py  calculate_the_delivery.py  info_by_id.py  list_of_my_parcels.py  register_a_parcel.py  routers.py
src/schemas/: schemas.py
src/services/: services.py
src/worker/: insert_parcel_celery.py
